<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by Basak Tuysuz</string>

    <!--String for on boarding screen-->
    <!-- titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>


    <!-- Descriptions-->
    <string name="first_slide_desc">You can seacr any place nearby or within the specified city</string>
    <string name="second_slide_desc">We provide almost the numbers of all departments and shops registered with us</string>
    <string name="third_slide_desc">If you have a shop or somethings want to be a part of our growing industry then add your place by</string>
    <string name="fourth_slide_desc">We will handle everything for you.As you have the app in your pocket then you don\'t have to worry</string>


    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">Lets Get Started</string>

    <!--Strings for dashboard-->

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="shops">Shops</string>
    <string name="hospitals">Hospitals</string>


    <!--Titles and descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations featured and have the top demand in town </string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categorıes</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!--Retailer Panel strings -->
    <string name="sign_up">Sign up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work</string>
    <string name="remember_me">Remember me </string>
    <string name="forget_password">Forget Password </string>
    <string name="forget_password_detail">Provıde your account\'s emaıl for whıch you want to reset your password  </string>
    <string name="login">Logın</string>
    <string name="via_sms">Via Sms</string>
    <string name="via_mail">Via Mail</string>
    <string name="make_selection">Make\nSelectıon</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>


    <!-- Login Panel strings-->
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="enter_phonenumber">Phone Number</string>
    <string name="enter_fullname">Full Name</string>

    <!-- All categories Menu names -->
    <string name="expand_all">Expand All</string>
    <string name="car_rent">Car Rent</string>
    <string name="education">Education</string>

    <string name="all_shops">All Shops</string>


    <!-- OTP Screen names -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verıfıcatıon</string>
    <string name="otp_description_text">Enter one time password sent on</string>


    <string name="new_credentials">New Credentıals</string>
    <string name="new_credentials_detail">Your identity has been verified!\nSet your new password </string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_succes_message">Your Password Has Been Updated!</string>

</resources>